infra/k8s/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: affable-gateway
  namespace: affable
spec:
  gatewayClassName: nginx
  listeners:
    - name: affable-http-listener
      port: 80
      protocol: HTTP
