infra/k8s/gateway/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: affable-web-route
  namespace: affable
spec:
  parentRefs:
    - kind: Gateway
      name: affable-gateway
      sectionName: affable-http-listener
  hostnames:
    - affable
  rules:
    - backendRefs:
        - name: affable-web
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: affable-core-route
  namespace: affable
spec:
  parentRefs:
    - kind: Gateway
      name: affable-gateway
      sectionName: affable-http-listener
  rules:
    - backendRefs:
        - name: affable-core
          port: 8080
  hostnames:
    - api.affable
